--- a/remoteNotesLib/remoteNotesLib.csproj
+++ b/remoteNotesLib/remoteNotesLib.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Note.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
