Add remoting xml configs and reformating

--- a/remoteLibServer/remoteLibServer.csproj
+++ b/remoteLibServer/remoteLibServer.csproj
@@ -44,4 +44,7 @@
       <Name>remoteNotesLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
 </Project>
