--- a/remoteNotes/remoteNotes.csproj
+++ b/remoteNotes/remoteNotes.csproj
@@ -77,4 +77,7 @@
       <Name>remoteNotesLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
 </Project>
