--- a/remoteNotes/App.Config
+++ b/remoteNotes/App.Config
@@ -3,38 +3,27 @@
   <system.runtime.remoting>
     <application>
 
-      <service>
+      <client url="http://localhost:13101">
         <wellknown mode="Singleton"
                    type="remoteNotesLib.NotesSingleton, remoteNotesLib"
-                   objectUri="NotesSingleton.rem" />
+                   url="http://localhost:13101/NotesSingleton.rem" />
         <wellknown mode="SingleCall"
                    type="remoteNotesLib.NoteTransactionSinglecall, remoteNotesLib"
-                   objectUri="NoteTransactionSinglecall.rem" />
+                   url="http://localhost:13101/NoteTransactionSinglecall.rem" />
         <activated type="remoteNotesLib.NotesClientActivated, remoteNotesLib" />
-            
-      </service>
+
+        
+      </client>
 
       <channels>
-        <channel port="13101" ref="http" >
-
-          <clientProviders>
-            <formatter ref="binary" typeFilterLevel="Full"/>
-          </clientProviders>
-
-          <serverProviders>
-            <formatter ref="binary" typeFilterLevel="Full"/>
-          </serverProviders>
-
-        </channel>
-
-        <channel ref="ipc" name = "Server" portName="ServerIPC" >
+        <channel port = "13102" ref="http" >
 
           <clientProviders>
             <formatter ref="binary"/>
           </clientProviders>
 
           <serverProviders>
-            <formatter ref="binary" typeFilterLevel="Full" />
+            <formatter ref="binary" />
           </serverProviders>
 
         </channel>
@@ -43,4 +32,5 @@
     </application>
   </system.runtime.remoting>
 </configuration>
+
 
