--- a/remoteNotesLib/remoteNotesLib.csproj
+++ b/remoteNotesLib/remoteNotesLib.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>remoteNotesLib</RootNamespace>
     <AssemblyName>remoteNotesLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.0.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
