--- a/remoteNotesServer/remoteNotesServer.csproj
+++ b/remoteNotesServer/remoteNotesServer.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>remoteLibServer</RootNamespace>
     <AssemblyName>remoteLibServer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.0.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
