Server now uses same singleton as clients

--- a/remoteNotesServer/App.config
+++ b/remoteNotesServer/App.config
@@ -3,23 +3,24 @@
     <system.runtime.remoting>
         <application>
             <service>
-                <wellknown mode="Singleton" type="remoteNotesLib.NotesSingleton, remoteNotesLib" objectUri="NotesSingleton.rem" />
-                <wellknown mode="SingleCall" type="remoteNotesLib.NotesTransactionSinglecall, remoteNotesLib" objectUri="NotesTransactionSinglecall.rem" />
+                <wellknown mode="Singleton" 
+                           type="remoteNotesLib.NotesSingleton, remoteNotesLib" 
+                           objectUri="NotesSingleton.soap" />
+                <wellknown mode="SingleCall" 
+                           type="remoteNotesLib.NotesTransactionSinglecall, remoteNotesLib" 
+                           objectUri="NotesTransactionSinglecall.soap" />
                 <activated type="remoteNotesLib.NotesClientActivated, remoteNotesLib" />
             </service>
             <channels>
-                <channel port="13000" ref="http">
-                    <clientProviders>
-                        <formatter ref="binary" typeFilterLevel="Full" />
-                    </clientProviders>
+                <channel ref="http" port="13000">
                     <serverProviders>
                         <formatter ref="binary" typeFilterLevel="Full" />
                     </serverProviders>
-                </channel>
-                <channel ref="ipc" name="Server" portName="ServerIPC">
                     <clientProviders>
-                        <formatter ref="binary" />
+                        <formatter ref="binary" typeFilterLevel="Full" />
                     </clientProviders>
+                </channel>
+                <channel ref="ipc" portName="NotesIpcChannel">
                     <serverProviders>
                         <formatter ref="binary" typeFilterLevel="Full" />
                     </serverProviders>
