--- a/remoteNotes/App.config
+++ b/remoteNotes/App.config
@@ -2,19 +2,18 @@
 <configuration>
     <system.runtime.remoting>
         <application>
-            <client url="http://localhost:13000">
-                <wellknown mode="Singleton" type="remoteNotesLib.NotesSingleton, remoteNotesLib" url="http://localhost:13000/NotesSingleton.rem" />
-                <wellknown mode="SingleCall" type="remoteNotesLib.NotesTransactionSinglecall, remoteNotesLib" url="http://localhost:13000/NotesTransactionSinglecall.rem" />
+            <client displayName="remoteNotesLib" url="http://localhost:13000">
+                <wellknown type="remoteNotesLib.NotesSingleton, remoteNotesLib" 
+                           url="http://localhost:13000/NotesSingleton.soap" />
+                <wellknown type="remoteNotesLib.NotesTransactionSinglecall, remoteNotesLib" 
+                           url="ipc://NotesIpcChannel/NotesTransactionSinglecall.soap" />
                 <activated type="remoteNotesLib.NotesClientActivated, remoteNotesLib" />
             </client>
             <channels>
-                <channel port="13001" ref="http">
+                <channel ref="http">
                     <clientProviders>
-                        <formatter ref="binary" />
+                        <formatter ref="binary" typeFilterLevel="Full" />
                     </clientProviders>
-                    <serverProviders>
-                        <formatter ref="binary" />
-                    </serverProviders>
                 </channel>
             </channels>
         </application>
