--- a/remoteNotesLib/remoteNotesLib.csproj
+++ b/remoteNotesLib/remoteNotesLib.csproj
@@ -38,6 +38,7 @@
     <Compile Include="NotesClientActivated.cs" />
     <Compile Include="NotesTransactionSinglecall.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="TransactionException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
