Transaction mechanism now works
В .Net списки не наследуют MarshalByRefObject, но сериализуются,
соотвественно, получается так, что получив список по ссылке, мы получаем
всего лишь бесполезную копию списка, а не прокси-объект. Так как он был сериализован,
передан по сети и десериализован на сервере. Поэтому после добавления,
удаления или замены данных в нём, его успешно съедал GC.
Однако реализовать список имплементирующий MarshalByRefObject тоже
нельзя, потому что каждый вызов будет передаваться по сети (или ipc в
данном случае, не важно), что слишком ресурсозатратно (время -- тоже ресурс).
Оптимальнее просто передать весь список по окончании обработки.
Метод SetPersistentData(List<Note> notes) заменяет список в синглтоне на обновлённый список.
Метод имеет модификатор доступа internal и может использоваться только
из текущего assembly. Т.е. из классов библиотеки.

--- a/remoteNotes/App.config
+++ b/remoteNotes/App.config
@@ -4,9 +4,9 @@
         <application>
             <client displayName="remoteNotesLib" url="http://localhost:13000">
                 <wellknown type="remoteNotesLib.NotesSingleton, remoteNotesLib" 
-                           url="http://localhost:13000/NotesSingleton.soap" />
+                           url="http://localhost:13000/NotesSingleton.rem" />
                 <wellknown type="remoteNotesLib.NotesTransactionSinglecall, remoteNotesLib" 
-                           url="ipc://NotesIpcChannel/NotesTransactionSinglecall.soap" />
+                           url="http://localhost:13000/NotesTransactionSinglecall.rem" />
                 <activated type="remoteNotesLib.NotesClientActivated, remoteNotesLib" />
             </client>
             <channels>
