--- a/remoteNotesServer/App.config
+++ b/remoteNotesServer/App.config
@@ -5,10 +5,10 @@
             <service>
                 <wellknown mode="Singleton" 
                            type="remoteNotesLib.NotesSingleton, remoteNotesLib" 
-                           objectUri="NotesSingleton.soap" />
+                           objectUri="NotesSingleton.rem" />
                 <wellknown mode="SingleCall" 
                            type="remoteNotesLib.NotesTransactionSinglecall, remoteNotesLib" 
-                           objectUri="NotesTransactionSinglecall.soap" />
+                           objectUri="NotesTransactionSinglecall.rem" />
                 <activated type="remoteNotesLib.NotesClientActivated, remoteNotesLib" />
             </service>
             <channels>
@@ -21,6 +21,9 @@
                     </clientProviders>
                 </channel>
                 <channel ref="ipc" portName="NotesIpcChannel">
+                    <clientProviders>
+                        <formatter ref="binary" typeFilterLevel="Full" />
+                    </clientProviders>
                     <serverProviders>
                         <formatter ref="binary" typeFilterLevel="Full" />
                     </serverProviders>
